<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.DetailActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/image"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/titulo"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        tools:text="Overwatch 2"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/tv_title"
        app:layout_constraintStart_toEndOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/descripcion"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        tools:text="Overwatch 2 asdas dasdasdasd asdasd asd asdasdasddasdasdasdasd"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/tv_description"
        app:layout_constraintStart_toEndOf="@id/tv_description"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/developer"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/developer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        tools:text="Blizzard"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/tv_developer"
        app:layout_constraintStart_toEndOf="@id/tv_developer"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/genre"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/developer"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        tools:text="Shooter"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/tv_genre"
        app:layout_constraintStart_toEndOf="@id/tv_genre"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_platform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/platform"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/genre"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/platform"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        tools:text="PC Xbox one Playstation 4"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/tv_platform"
        app:layout_constraintStart_toEndOf="@id/tv_platform"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_publisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/publisher"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/platform"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/publisher"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        tools:text="Blizzard"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/tv_publisher"
        app:layout_constraintStart_toEndOf="@id/tv_publisher"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>